--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "css",
     "es",
     "lib",
-    "umd"
+    "umd",
+    "index.d.ts"
   ],
   "scripts": {
     "build": "nwb build-react-component",
