--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "mobile-device-detect": "^0.4.3"
+  },
   "peerDependencies": {
     "react": "16.x"
   },
